# PEG-code

./: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/store/: editorStore.test.ts  editorStore.ts
src/components/: ErrorBoundary.tsx  GcodePanel.tsx  Viewport.tsx
src/domain/toolpath/: delete.ts  exportGcode.test.ts  exportGcode.ts  extrude.test.ts  extrude.ts  format.ts  math.ts  move.test.ts  move.ts  parseGcode.test.ts  parseGcode.ts  sample.ts  serializeGcode.test.ts  serializeGcode.ts  types.ts
src/lib/: fileSystem.ts
