[package]
name = "peg-code"
version = "0.1.0"
description = "Path Editor for G-code"
authors = ["RAKE_FMS"]
edition = "2021"

[lib]
name = "peg_code_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.2.5", features = [] }
tauri-plugin-dialog = "2.2.0"
